fix mobile nav overflow on iOS

--- a/css/styles.css
+++ b/css/styles.css
@@ -481,7 +481,7 @@ body > footer > .container nav.footer-nav ul > li > a.nolink {
     display: block; } }
 
 .navigation > .container > nav.active {
-  display: block; }
+  display: table; }
 
 body > footer > .container {
   border-top: 1px solid grey;
